--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <body>
     <div class="wrapper">
       <div class="time"></div>
-      <div class="time2"></div>
     </div>
-    <script src="./script.js"></script>
+    <script src="./script.js" defer></script>
   </body>
 </html>
